--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
 	"name": "toot.ninja",
-	"version": "0.0.1",
+	"description": "https://toot.ninja website",
+	"version": "0.0.2",
 	"private": true,
 	"scripts": {
+		"localdev": "npm run dev -- --open --host",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -30,5 +32,9 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"engines": {
+		"node": "18.x",
+		"npm": "8.x"
+	}
 }
