--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
+		"@sveltejs/adapter-node": "^1.0.0-next.100",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
