add host to run command, and bump version

--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
 	"name": "toot.ninja",
 	"description": "https://toot.ninja website",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"private": true,
 	"scripts": {
-		"localdev": "npm run dev -- --open --host",
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "vite preview --host",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
